[gd_scene load_steps=7 format=3 uid="uid://bhxwx7x4t6uef"]

[ext_resource type="Script" uid="uid://bw2p6jagbqju2" path="res://mainhub/main_hub.gd" id="1_b0t31"]
[ext_resource type="Texture2D" uid="uid://b2fdypxslmu55" path="res://sprites/Background.png" id="2_sas5s"]
[ext_resource type="Texture2D" uid="uid://bnjkvowb748e3" path="res://sprites/casino.png" id="3_5txe5"]
[ext_resource type="PackedScene" uid="uid://uc4fpt15by5y" path="res://mainhub/player_mainhub.tscn" id="4_re4mj"]
[ext_resource type="Texture2D" uid="uid://88q458ambixc" path="res://sprites/h_l_sprite.png" id="5_psfs6"]
[ext_resource type="Texture2D" uid="uid://b68og5uubfwmp" path="res://sprites/adventure_sprite.png" id="6_ngm16"]

[node name="MainHub" type="Node2D"]
script = ExtResource("1_b0t31")

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(605, 364)
texture = ExtResource("2_sas5s")

[node name="Casino" type="Area2D" parent="."]

[node name="Casino2" type="Sprite2D" parent="Casino"]
position = Vector2(1084, 333)
texture = ExtResource("3_5txe5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Casino"]
position = Vector2(1084, 333)
polygon = PackedVector2Array(-100, -100, -100, 100, 100, 100, 100, -100)

[node name="PlayerMainhub" parent="." instance=ExtResource("4_re4mj")]
position = Vector2(513, 342)

[node name="Camera2D" type="Camera2D" parent="PlayerMainhub"]

[node name="HighOrLow" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="HighOrLow"]
position = Vector2(8, 330)
texture = ExtResource("5_psfs6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HighOrLow"]
position = Vector2(8, 330)
polygon = PackedVector2Array(-100, -100, -100, 100, 100, 100, 100, -100)

[node name="Adventure" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Adventure"]
position = Vector2(489, 89)
texture = ExtResource("6_ngm16")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Adventure"]
position = Vector2(489, 89)
polygon = PackedVector2Array(-100, -100, -100, 100, 100, 100, 100, -100)

[connection signal="body_entered" from="Casino" to="." method="_on_casino_body_entered"]
[connection signal="body_entered" from="HighOrLow" to="." method="_on_high_or_low_body_entered"]
[connection signal="body_entered" from="Adventure" to="." method="_on_adventure_body_entered"]
